--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,8 @@ services:
       ports:
         - 8080:8080
 
+    redis:
+        image: redis
+        restart: always
+        ports:
+            - 6379:6379
